--- a/index.html
+++ b/index.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculadora</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Calculadora Avanzada</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <div class="calculator">
-    <form method="POST" action="/calculate">
-      <input type="text" name="num1" placeholder="Número 1" required>
-      <select name="operator">
-        <option value="+">+</option>
-        <option value="-">-</option>
-        <option value="*">*</option>
-        <option value="/">/</option>
-      </select>
-      <input type="text" name="num2" placeholder="Número 2" required>
-      <button type="submit">Calcular</button>
-    </form>
+    <h2>Calculadora Avanzada</h2>
+    <input type="number" id="num1" placeholder="Número 1" required />
+    <select id="operator">
+      <option value="+">+</option>
+      <option value="-">-</option>
+      <option value="*">*</option>
+      <option value="/">/</option>
+      <option value="^">Potencia</option>
+      <option value="sqrt">Raíz</option>
+    </select>
+    <input type="number" id="num2" placeholder="Número 2" />
+    <button onclick="calculate()">Calcular</button>
     <div class="result" id="result"></div>
   </div>
   <script>
-    const query = new URLSearchParams(window.location.search);
-    if (query.has('result')) {
-      document.getElementById('result').textContent = 'Resultado: ' + query.get('result');
+    async function calculate() {
+      const num1 = parseFloat(document.getElementById('num1').value);
+      const num2 = parseFloat(document.getElementById('num2').value);
+      const operator = document.getElementById('operator').value;
+
+      const res = await fetch('/api/calculate', {
+        method: 'POST',
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify({ num1, num2, operator })
+      });
+
+      const data = await res.json();
+      document.getElementById('result').textContent = 'Resultado: ' + data.result;
     }
   </script>
 </body>
