--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="calculator">
     <h2>Calculadora Avanzada</h2>
     <input type="number" id="num1" placeholder="Número 1" required />
-    <select id="operator">
+    <select id="operator" onchange="toggleNum2(this.value)">
       <option value="+">+</option>
       <option value="-">-</option>
       <option value="*">*</option>
@@ -22,21 +22,6 @@
     <button onclick="calculate()">Calcular</button>
     <div class="result" id="result"></div>
   </div>
-  <script>
-    async function calculate() {
-      const num1 = parseFloat(document.getElementById('num1').value);
-      const num2 = parseFloat(document.getElementById('num2').value);
-      const operator = document.getElementById('operator').value;
-
-      const res = await fetch('/api/calculate', {
-        method: 'POST',
-        headers: {'Content-Type': 'application/json'},
-        body: JSON.stringify({ num1, num2, operator })
-      });
-
-      const data = await res.json();
-      document.getElementById('result').textContent = 'Resultado: ' + data.result;
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
