--- a/index.html
+++ b/index.html
@@ -8,19 +8,33 @@
 </head>
 <body>
   <div class="calculator">
-    <h2>Calculadora Avanzada</h2>
-    <input type="number" id="num1" placeholder="Número 1" required />
-    <select id="operator" onchange="toggleNum2(this.value)">
-      <option value="+">+</option>
-      <option value="-">-</option>
-      <option value="*">*</option>
-      <option value="/">/</option>
-      <option value="^">Potencia</option>
-      <option value="sqrt">Raíz</option>
-    </select>
-    <input type="number" id="num2" placeholder="Número 2" />
-    <button onclick="calculate()">Calcular</button>
-    <div class="result" id="result"></div>
+    <h1>Calculadora</h1>
+    <input type="text" id="display" readonly />
+    <div class="buttons">
+      <button onclick="append('7')">7</button>
+      <button onclick="append('8')">8</button>
+      <button onclick="append('9')">9</button>
+      <button onclick="append('/')">÷</button>
+
+      <button onclick="append('4')">4</button>
+      <button onclick="append('5')">5</button>
+      <button onclick="append('6')">6</button>
+      <button onclick="append('*')">×</button>
+
+      <button onclick="append('1')">1</button>
+      <button onclick="append('2')">2</button>
+      <button onclick="append('3')">3</button>
+      <button onclick="append('-')">−</button>
+
+      <button onclick="append('0')">0</button>
+      <button onclick="append('.')">.</button>
+      <button onclick="calculate()">=</button>
+      <button onclick="append('+')">+</button>
+
+      <button onclick="append('**')">^</button>
+      <button onclick="append('Math.sqrt(')">√</button>
+      <button onclick="clearDisplay()">C</button>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
